Fix slide out menu from showing up on page load and being visible when over-scrolling on iOS.

--- a/resources/gato-template-txstate2015/css/_mobile.scss
+++ b/resources/gato-template-txstate2015/css/_mobile.scss
@@ -167,5 +167,5 @@
 }
 
 @media screen and (max-width: $sm-breakpoint) {
-    .hamburger, .mobile_nav {display: block;}
+    .hamburger {display: block;}
 }
